# Spotify-Playlist-Generator

./: .gitignore  README.md  vercel.json
backend/: .gitignore  config.py  main.py  pyproject.toml  requirements.txt  schema.sql  server.py  supabase.py
backend/routers/: gemini.py  gemini_models.py  gemini_tools.py  spotify.py  spotify_models.py
backend/spotify-agent/agent/: agent.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: navbar.tsx
frontend/src/config/: site.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: 404.tsx  create.tsx  createWithAI.tsx  index.tsx  login.tsx  logout.tsx  playlists.tsx  profile.tsx  search.tsx  stats.tsx  top-artists.tsx  top-tracks.tsx  tracks.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
spotify-mcp-server/: http-server.js  package.json
