[project]
name = "my-vercel-project"
version = "0.1.0"
description = "Vercel deployment"
requires-python = "==3.12.*"

dependencies = [
    # If you use requirements.txt, you can leave this list empty
    # or list your main packages here.
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"