[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "supabase>=2.27.3",
    "uvicorn>=0.40.0",
]
